# qualquer

./: .clangd  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  dlss-debug-report.md  hot-path-review.md  phase4-discussion.md  phase4-research-part2.md  render-pipeline-review.md  vcpkg.json
.pi/extensions/pi-permission-system/: config.json
app/: CMakeLists.txt
app/include/qualquer/app/: application.h  cache.h  camera_controller.h  config.h  emissive_alias_table.h  env_alias_table.h  equirect_to_cubemap.h  ktx2.h  mesh.h  scene_loader.h  texture.h
app/src/: application.cpp  cache.cpp  camera_controller.cpp  config.cpp  emissive_alias_table.cpp  env_alias_table.cpp  equirect_to_cubemap.cu  ktx2.cpp  main.cpp  mesh.cpp  scene_loader.cpp  stb_impl.cpp  texture.cpp
cmake/: CompileOptiXIR.cmake  FindOptiX.cmake
docs/: agent-context.md  architecture.md  current-phase.md  phase4-discussion.md  roadmap.md  technical-decisions.md
docs/archive/: latest-nvidia-tech-deep-research-report.md  phase3.md  phase4-discussion.md  phase4-research-part1.md
optix/: CMakeLists.txt
optix/include/qualquer/optix/: accel_structure.h  context.h  cuda_array_buffer.h  cuda_buffer.h  cuda_check.h  cuda_check_kernel.h  cuda_texture.h  cuda_texture_upload.h  dlss_rr.h  optix_check.h  pipeline.h
optix/src/: accel_structure.cpp  context.cpp  cuda_texture_upload.cpp  dlss_rr.cpp  optix_stubs_impl.cpp  pipeline.cpp
renderer/: CMakeLists.txt
renderer/include/qualquer/renderer/: brdf.cuh  cache.h  camera.h  debug_ui.h  imgui_backend.h  ktx2.h  launch_params.h  material.h  math_utils.cuh  mesh.h  nee.cuh  payload_helpers.cuh  pt_common.cuh  render_settings.h  renderer.h  rng.cuh  scene_stats.h  scene_types.h  sobol_direction_data.h  test_kernel.h  texture.h  tonemap.cuh  tonemap.h  vertex.h
renderer/src/: cache.cpp  camera.cpp  debug_ui.cpp  imgui_backend.cpp  ktx2.cpp  mesh.cpp  placeholder.cpp  renderer.cpp  stb_impl.cpp  test_kernel.cu  texture.cpp  tonemap.cu
renderer/src/device/: programs.cu
tasks/: phase1.md  phase2.md  phase3.md  phase4.5.md  phase4.md
tasks/archive/: phase1.md  phase4.md
vulkan/: CMakeLists.txt
vulkan/include/qualquer/vulkan/: context.h  imgui_backend.h  interop.h  swapchain.h
vulkan/src/: context.cpp  imgui_backend.cpp  interop.cpp  swapchain.cpp  vma_impl.cpp
